--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@ html {
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
     padding: 5px;
+    background-image: url("../images/dolar.jpg");
+    background-size: 100% 100%;
+    background-position: center;
 }
 
 .calculator {
