--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html {
     background-color: #f2f2f2;
     padding: 5px;
     background-image: url("../images/dolar.jpg");
-    background-size: 100% 100%;
+    background-size: cover;
     background-position: center;
 }
 
