--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,9 @@ html {
     background-image: url("../images/dolar.jpg");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
+
 
 .calculator {
     width: 100%;
